@@ -15,6 +15,9 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - We now accept/remove X-Approved: and X-Approve: headers in addition to
+      Approved: and Approve: for pre-approving posts.  Bug ##557750.
+
     - Reordered the 'cancel' and 'subscribe' buttons on the subscription
       confirmation web page so the default action upon 'enter' will be the
       subscribe button in browsers that pick the first button.  Bug #530654.
